version 2.0.15+cvs (cvs):
	* Fix Bug #2431005 In some cases is default language for
	  spelling is set to EN (Blondak)
	* Fix Bug #2715972 Remove an extra comma at the end of the GtkSpellError
	  enum definition.
	* Fix Bug #2526949 Sort languages list submenu.

version 2.0.15 (2008-12-01):
	* Additional translations (see po/ChangeLog).
	* Add missing G_BEGIN_DECLS/G_END_DECLS for C++ support
	* Fix feature request #2101451 by removing the sub-menu
	  of the context menu as any other in-line spell checker does.
	* Fix feature request #1523881, #1643622 and #2054637
	  by adding a Language selector sub-menu.
	* Fix feature request #1362304 by fixing docs/Makefile.am
	  to install gtkspell.devhelp so that it shows in devhelp

version 2.0.14 (2008-08-15):
	* Additional translations (see po/ChangeLog).
	* Changed bug reporting address at configure.ac:AC_INIT
	* undo/redo in the calling application (Liviu Andronic)
	* gtkspell_get_suggestions_menu() (Liviu Andronic)

version 2.0.13 (2008-05-20):
	* Additional translations (see po/ChangeLog).
	* Enchant support (support for pspell/aspell dropped) (Dom Lachowicz)

version 2.0.12 (2008-05-09):
	* Make debug, quiet and build_suggestion_menu static in gtkspell.c
	  to prevent exporting them.
	* One additional translation (see po/ChangeLog).
	* Move spell-checking library from Libs to Libs.private in
	  gtkspell-2.0.pc 
	* Update autogen.sh to use intltool
	* Fix warnings with -Wstrict-prototypes by Richard Laager

version 2.0.11 (2005-05-27):
	* Re-enable apostrophe word-breaking workarounds (GNOME bug #97545).
	* Additional translations (see po/ChangeLog).

version 2.0.10 (2005-02-27):
	* Re-release 2.0.9 with debug mode turned off.
	* One additional translation (see po/ChangeLog).

version 2.0.9 (2005-02-22):
	* Enable building outside of srcdir (Mike Castle)
	* Use bind_textdomain_codeset to set UTF-8 encoding for all translations.
	* Do not delete the GtkTextTag from the tag table (needed for shared
	  tag tables).